Cria `ListaCategoriasComponent` e `CategoriaComponent`.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
-  Exemplo de nav
+  <app-lista-categorias></app-lista-categorias>
 </nav>
 <main>
-  Exemplo de main
+  Selecione uma categoria
+  <app-categoria></app-categoria>
 </main>
