--- a/src/app/components/lista-categorias/lista-categorias.component.html
+++ b/src/app/components/lista-categorias/lista-categorias.component.html
@@ -1,5 +1,6 @@
 <button
   *ngFor="let c of (categoriaService.categorias$ | async)"
+  (click)="categoriaService.selecionaCategoria(c)"
 >
   {{ c.nome }}
 </button>
