Cria o `FilmeComponent`, `FilmeService` e a visualização da lista de filmes por categoria.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
       [categoria]="c"
     >
     </app-categoria>
+    <app-filme
+      [categoria]="c"
+    ></app-filme>
   }
   @else {
     Selecione uma categoria
