--- a/src/app/components/filme/filme.component.html
+++ b/src/app/components/filme/filme.component.html
@@ -16,5 +16,5 @@
   </div>
 </div>
 <ng-template #empty>
-  <p>Não há filmes para esta categoria.</p>
+  <p class="semFilmes">Não há filmes para esta categoria.</p>
 </ng-template>
